--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "cra-template-pwa": "2.0.0",
+    "firebase": "^12.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-scripts": "5.0.1"
   },
   "scripts": {
