--- a/server/package.json
+++ b/server/package.json
@@ -16,8 +16,10 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "firebase-admin": "^13.4.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.16.4"
+    "mongoose": "^8.16.4",
+    "react-firebase-hooks": "^5.1.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
