--- a/client/package.json
+++ b/client/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "cra-template-pwa": "2.0.0",
+    "axios": "^1.7.9",
     "firebase": "^12.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-firebase-hooks": "^5.1.1",
+    "react-router-dom": "^7.7.0",
     "react-scripts": "5.0.1"
   },
   "scripts": {
